--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "as3js",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "author": "Greg McLeod <cleod9@gmail.com>, Lion Burger <lionbur@gmail.com>",
-  "description": "AS3 to JS2015+ converter.",
+  "description": "AS3 to ES2015 and Typescript converter.",
   "bin": {
     "as3js": "./bin/as3jsc.js"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-register": "^6.16.3",
     "js-beautify": "1.5.10",
     "node-mkdirs": "0.0.1"
   },
