--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "as3js",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "author": "Greg McLeod <cleod9@gmail.com>, Lion Burger <lionbur@gmail.com>",
   "description": "AS3 to ES2015 and Typescript converter.",
   "bin": {
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-register": "^6.16.3",
     "js-beautify": "1.5.10",
