--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "as3js",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "author": "Greg McLeod <cleod9@gmail.com>, Lion Burger <lionbur@gmail.com>",
   "description": "AS3 to ES2015 and Typescript converter.",
   "bin": {
     "as3js": "./bin/as3jsc.js"
+  },
+  "scripts": {
+    "install": "node build"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.16.0",
@@ -12,7 +15,8 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-register": "^6.16.3",
     "js-beautify": "1.5.10",
-    "node-mkdirs": "0.0.1"
+    "node-mkdirs": "0.0.1",
+    "rimraf": "^2.5.4"
   },
   "main": "./index.js",
   "repository": {
