--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "as3js",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "author": "Greg McLeod <cleod9@gmail.com>, Lion Burger <lionbur@gmail.com>",
   "description": "AS3 to ES2015 and Typescript converter.",
   "bin": {
@@ -9,13 +9,15 @@
   "scripts": {
     "install": "node build"
   },
+  "dependencies" : {
+    "js-beautify": "1.5.10",
+    "node-mkdirs": "0.0.1",
+  },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.16.0",
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-register": "^6.16.3",
-    "js-beautify": "1.5.10",
-    "node-mkdirs": "0.0.1",
     "rimraf": "^2.5.4"
   },
   "main": "./index.js",
